--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-loader-spinner": "^6.1.6",
+    "react-scan": "^0.0.30",
+    "weather-icons-react": "^1.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
